to prevent overlap in the leaderboard the text now gets smaller on mobile. i first tried two lines but it didnt look great so i reduced the font size instead

--- a/assets/css/base/_modifiers.scss
+++ b/assets/css/base/_modifiers.scss
@@ -133,3 +133,8 @@ a.with-border:focus {
     padding-right: 20px;
   }
 }
+.sml-smaller-text {
+  @include respond-to-max(sml) {
+    font-size: 14px;
+  }
+}
